--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/checkbox": "^0.5.16",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@reduxjs/toolkit": "^1.9.6",
+    "@types/react-native-dotenv": "^0.2.0",
+    "axios": "^1.5.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "react-redux": "^8.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -35,6 +40,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
+    "react-native-dotenv": "^3.4.9",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
